<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessArena</string>
    <string name="beginner">BEGINNER</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="very_hard">VERY HARD</string>
    <string name="crazy">CRAZY</string>
    <string name="impossible">IMPOSSIBLE</string>
    <string name="word_length">Word Length: %1$d - %2$d</string>
    <string name="answer_time_in_minutes">Time: %1$d minute(s)</string>
    <string name="hint_number">Hint number: %1$d</string>
    <string name="guess_number">Guess number: %1$d</string>
    <string name="correction_percentages">Correction Percentages: %1$d\%</string>
    <string name="retry_number">Retry Number: %1$d time(s)</string>
    <string name="one_one">1-1</string>
    <string name="exp_bet">Experien Bet</string>
    <string name="buki_bet">Buki Bet</string>
    <string name="one_one_description">In this 1-1 match, you get the experience points you gain in the game. Blah blah blah...</string>
    <string name="exp_bet_description">In this experience-bet match, you and your opponent use your own experiences points to bet. The winner will get all the bet experience point, regardless of how many experience point he gains in the game.</string>
    <string name="exp_point_to_bet">Experience point to bet</string>
    <string name="next">Next</string>
    <string name="buki_bet_description">In this buki-bet match, you and your opponent pick one of your buki to bet. The winner will take the buki from the loser.</string>
    <string name="buki_to_bet">Select Buki to bet</string>
    
    <string name="tutorial_text">Game Tutorial</string>
    <string name="desc">Description</string>
    <string name="search_buki_hint">Search Buki</string>
    <string name="skip">Skip</string>
    <string name="buki_name">Name</string>
    <string name="buki_desc">Description of buki</string>
    <string name="buki_number">3</string>
    <string name="friend_name_1">shinji kagawa</string>
    <string name="friend_name_2">honda yamamoto</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="notification">NOTIFICATION</string>
    <string name="invite">INVITE</string>
    <string name="events">EVENTS</string>
    <string name="games">GAMES</string>
    <string name="notif_number1">3</string>
    <string name="notif_number2">1</string>
    <string name="notif_number3">4</string>
    <string name="notif_text">Notification Event</string>

</resources>