<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <ImageView
        android:id="@+id/friend_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/emo_im_laughing" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/friend_avatar"
        android:gravity="center_vertical"
        android:text="@string/friend_name_2" />

    <ImageView
        android:id="@+id/offline_status"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_area_red"
        android:contentDescription="@string/offline" />

</RelativeLayout>
