<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/notification" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/Btn1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle_red_holo"
                android:text="@string/notif_number1" />

            <TextView
                android:id="@+id/invite_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/invite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/Btn2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle_red_holo"
                android:text="@string/notif_number2" />

            <TextView
                android:id="@+id/event_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle_red_holo"
                android:text="@string/notif_number3" />

            <TextView
                android:id="@+id/game_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/games" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/notif_item"
        layout="@layout/notif_item_view" />

    <include
        android:id="@+id/notif_item"
        layout="@layout/notif_item_view" />

    <include
        android:id="@+id/notif_item"
        layout="@layout/notif_item_view" />

    <include
        android:id="@+id/notif_item"
        layout="@layout/notif_item_view" />

    <include
        android:id="@+id/notif_item"
        layout="@layout/notif_item_view" />

</LinearLayout>