<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1F1F1"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <Button
                        android:id="@+id/bt_beginner"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/beginner"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_easy"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/easy"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_normal"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/normal"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_hard"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/hard"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_very_hard"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/very_hard"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_crazy"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/crazy"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_impossible"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/match_level_button_bg_states"
                        android:text="@string/impossible"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_word_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_answer_time_in_minutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_hint_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_guess_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_correction_percentages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_retry_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>